manifests/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: syfter
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
